add action.html | pravki aboutUs.html

--- a/aboutus.html
+++ b/aboutus.html
@@ -329,6 +329,7 @@
 														e-green">sale</span></a><span class="plus js-plus-icon"></span></li>
 											<li class="level1 active dropdown"><a href="/contacts.html">Контакты</a></li>
 											<li class="level1 active dropdown"><a href="/shop_full.html">Каталог</a></li>
+											<li class="level1 active dropdown"><a href="/action.html" class="myNavbar__action">Акция</a></li>
 										</ul>
 									</div>
 								</nav>
@@ -367,7 +368,7 @@
 							<p class="about-desc spc" style="min-height:105px;">Необычные и повседневные предложения товаров,
 								которыевам понадобятся! Поиск поболее чем огромному ассортименту товаров. Каталог товаров с описаниями и
 								изображениями большого числамоделей и типов товаров.</p>
-							<div class="about-img"><img src="img/about/assortiment.jpeg" alt="" class="img-responsive"></div>
+							<div class="about-img"><img src="img/about/assortiment.jpg" alt="" class="img-responsive"></div>
 						</div>
 					</div>
 				</div>
@@ -400,6 +401,7 @@
 									<li><a href="/contacts.html">Контакты</a></li>
 									<li><a onclick="showDir()" href="#">Связаться с директором </a></li>
 									<li><a href="/shop_full.html">Каталог</a></li>
+									<li><a href="/action.html" class="myNavbar__action">Акция</a></li>
 								</ul>
 							</div>
 						</div>
