--- a/product_set_of_pots.html
+++ b/product_set_of_pots.html
@@ -327,6 +327,7 @@
 											<li class="level1 dropdown hassub"><a href="/delivery.html">Доставка<span class="h-ribbon h-pos	e-green">sale</span></a><span class="plus js-plus-icon"></span></li>
 											<li class="level1 active dropdown"><a href="/contacts.html">Контакты</a></li>
 											<li class="level1 active dropdown"><a href="/shop_full.html">Каталог</a></li>
+											<li class="level1 active dropdown"><a href="/action.html" class="myNavbar__action">Акция</a></li>
 										</ul>
 									</div>
 								</nav>
@@ -560,7 +561,7 @@
 								<ul class="footer-block-content">
 									<li><a href="/contacts.html">Контакты</a></li>
 									<li><a onclick="showDir()" href="#">Связаться с директором </a></li>
-									<li><a href="/shop_full.html">Каталог</a></li>
+									<li><a href="/action.html" class="myNavbar__action">Акция</a></li>
 								</ul>
 							</div>
 						</div>
