--- a/product_shvabra_samo.html
+++ b/product_shvabra_samo.html
@@ -329,6 +329,7 @@
 														e-green">sale</span></a><span class="plus js-plus-icon"></span></li>
 											<li class="level1 active dropdown"><a href="/contacts.html">Контакты</a></li>
 											<li class="level1 active dropdown"><a href="/shop_full.html">Каталог</a></li>
+											<li class="level1 active dropdown"><a href="/action.html" class="myNavbar__action">Акция</a></li>
 										</ul>
 									</div>
 								</nav>
@@ -376,7 +377,6 @@
 								<div class="product-col">
 									<div class="img"><img src="img/product/hit_tov_6_4.jpg" alt="images" class="img-responsive"></div>
 								</div>
-								<li class="level1 active dropdown"><a href="/shop_full.html">Каталог</a></li>
 							</div>
 						</div>
 					</div>
@@ -587,6 +587,7 @@
 									<li><a href="/contacts.html">Контакты</a></li>
 									<li><a onclick="showDir()" href="#">Связаться с директором </a></li>
 									<li><a href="/shop_full.html">Каталог</a></li>
+									<li><a href="/action.html" class="myNavbar__action">Акция</a></li>
 								</ul>
 							</div>
 						</div>
