--- a/product_slimming_patch.html
+++ b/product_slimming_patch.html
@@ -337,6 +337,7 @@
 														e-green">sale</span></a><span class="plus js-plus-icon"></span></li>
 											<li class="level1 active dropdown"><a href="/contacts.html">Контакты</a></li>
 											<li class="level1 active dropdown"><a href="/shop_full.html">Каталог</a></li>
+											<li class="level1 active dropdown"><a href="/action.html" class="myNavbar__action">Акция</a></li>
 										</ul>
 									</div>
 								</nav>
@@ -590,6 +591,7 @@
 									<li><a href="/contacts.html">Контакты</a></li>
 									<li><a onclick="showDir()" href="#">Связаться с директором </a></li>
 									<li><a href="/shop_full.html">Каталог</a></li>
+									<li><a href="/action.html" class="myNavbar__action">Акция</a></li>
 								</ul>
 							</div>
 						</div>
