--- a/shop_full.html
+++ b/shop_full.html
@@ -329,6 +329,7 @@
 														e-green">sale</span></a><span class="plus js-plus-icon"></span></li>
 											<li class="level1 active dropdown"><a href="/contacts.html">Контакты</a></li>
 											<li class="level1 active dropdown"><a href="/shop_full.html">Каталог</a></li>
+											<li class="level1 active dropdown"><a href="/action.html" class="myNavbar__action">Акция</a></li>
 										</ul>
 									</div>
 								</nav>
@@ -3649,8 +3650,8 @@
 									<li class="email"><span> ЕРИП, Белпочта</span></li>
 								</ul>
 								<div class="footer-social social">
-									<h3 class="footer-block-title"> Следите за нами в instagram</h3><a href="https://www.instagram.com/starshop.by/"
-										class="fa fa-instagram"></a>
+									<h3 class="footer-block-title"> Следите за нами в instagram</h3><a
+										href="https://www.instagram.com/starshop.by/" class="fa fa-instagram"></a>
 								</div>
 							</div>
 						</div>
@@ -3661,6 +3662,7 @@
 									<li><a href="/contacts.html">Контакты</a></li>
 									<li><a onclick="showDir()" href="#">Связаться с директором </a></li>
 									<li><a href="/shop_full.html">Каталог</a></li>
+									<li><a href="/action.html" class="myNavbar__action">Акция</li>
 								</ul>
 							</div>
 						</div>
