delete vam tochno ponravitcya

--- a/action.html
+++ b/action.html
@@ -471,7 +471,7 @@
 									<div class="element-list element-list-middle">
 
 										<p class="product-cate">Техника</p>
-										<h3 class="product-title">Наушники копия Pro</h3>
+										<h3 class="product-title">Камера IP 1080P HP поворотная</h3>
 										<div class="product-bottom">
 											<div class="product-price">
 												<span class="red">170.00 руб</span>
