change phone number

--- a/action.html
+++ b/action.html
@@ -165,7 +165,7 @@
 					<div class="row flex">
 						<div class="col-lg-2 col-md-2 col-sm-6 col-xs-6 v-center header-logo"><a href="/"><img src="img/logo.png"
 									alt="" class="img-reponsive"></a></div>
-						<div class="mobile_phone"><a href="tel:+375298753520">+375 (29) 875-35-20</a><a class="call_director"
+						<div class="mobile_phone"><a href="tel:+375298877667">+375(29)887-76-67</a><a class="call_director"
 								onclick="showDir()" href="#">Связаться с директором </a></div>
 						<div class="col-lg-6 col-md-6 v-center header-search hidden-xs hidden-sm">
 							<form class=""><input type="text" autocomplete="off" maxlength="40" name="tov_name_header"
@@ -187,7 +187,7 @@
 								<div class="header-sub-element hidden-xs hidden-sm">
 									<div class="sub-left"><img src="img/icon-call.png" alt=""></div>
 									<div class="sub-right"><span>Бесплатный звонок</span>
-										<div class="phone"><a href="tel:+375298753520">+375(29)875-35-20</a><br><a class="call_director"
+										<div class="phone"><a href="tel:+375298877667">+375(29)887-76-67</a><br><a class="call_director"
 												onclick="showDir()" href="#">Связаться с директором </a></div>
 									</div>
 								</div>
@@ -359,7 +359,7 @@
 						<p><b>Акционное предложение</b> действительно только при оплате единым платежом. Акции не суммируются.
 							Наличие
 							акционного товара и подробную информацию вы можете получить у консультантов по телефону: <a
-								href="tel:+375298753520">+375(29)875-35-20</a></p>
+								href="tel:+375298877667">+375(29)887-76-67</a></p>
 						<span class="clearfix"></span>
 					</div>
 				</div>
@@ -572,7 +572,7 @@
 								<div class="f-logo"><a href="#"><img src="img/logo.png" alt="" class="img-reponsive"></a></div>
 								<ul class="footer-block-content">
 									<li class="address"><span>Республика Беларусь</span></li>
-									<li class="phone"><a href="tel:+375298753520">+375298753520</a></li>
+									<li class="phone"><a href="tel:+375298877667">+375(29)887-76-67</a></li>
 									<li class="email"><span>yekommers@bk.ru</span></li>
 									<li class="time"><span>Режим работы: 24/7</span></li>
 									<li class="email"><span> ЕРИП, Белпочта</span></li>
@@ -607,8 +607,8 @@
 						<div class="footer__item-4">
 							<div class="footer-block">
 								<div class="footer-block-phone">
-									<h3 class="footer-block-title">Горячая линия</h3><a href="tel:+375298753520" class="phone-light">+375
-										(29) 875-35-20</a>
+									<h3 class="footer-block-title">Горячая линия</h3>
+									<a href="tel:+375298877667" class="phone-light">+375(29)887-76-67</a>
 								</div>
 								<div class="footer-block-newsletter">
 									<h3 class="footer-block-title">Получайте СКИДКУ ДО 70%</h3>
