banner-callus spc2 spc5 image-bd effect_img2 hide this banner

--- a/index.html
+++ b/index.html
@@ -2993,12 +2993,13 @@
 				</div>
 			</div>
 		</div>
-		<div class="container container-240">
+		<br>
+		<!-- <div class="container container-240">
 			<div class="banner-callus spc2 spc5 image-bd effect_img2"><a href="#"><img src="img/banner/banner_sales.png"
 						alt="" class="img-responsive"></a>
 				<div class="box-center"><a href="/shop_full.html" class="btn-callus">Заказать со скидкой</a></div>
 			</div>
-		</div>
+		</div> -->
 		<footer id="footer">
 			<div class="f-top">
 				<div class="footer__wrapper">
