--- a/action.html
+++ b/action.html
@@ -353,9 +353,11 @@
 					<div class="action_page__info-container-text">
 						<p class="action_page__info-container-text-title" style="font-weight: bold; color: #e60000;">С 9 сентября по
 							31 октября:</p>
-						<p>• совершайте покупки в магазине Star-Shop.by <b>на сумму от 120 руб.</b> по акционным товарам со скидкой
-							до <b>80%</b>
-							на выделенный ассортимент магазина star-shop.by</p>
+						<p>• в магазине Star Shop проходит акция между 14 магазинов партнеров;</p>
+						<p>• каждый день робот будет выбирать 3х счастливчиков из более 2 миллионов покупателей.
+							Победитель может стать обладателем Power Banka на <b>20.800 mhA.</b>, Которой смогут забрать при первой же
+							покупке; </p>
+						<p>• но и это еще не все, победители так же получают скидку ДО <b>70%</b> на наши подарочные боксы;</p>
 						<p><b>Акционное предложение</b> действительно только при оплате единым платежом. Акции не суммируются.
 							Наличие
 							акционного товара и подробную информацию вы можете получить у консультантов по телефону: <a
@@ -366,7 +368,8 @@
 
 				<div class="action_page__tovar-container row">
 					<div class="action_page__tovar-container-item">
-						<div class="col-xs-6 col-sm-4 col-md-4 col-lg-3 product-item" onclick="openItemModalSetTwo('robot-xim','mouzer_fen_blr','Робот пылесос Ximeije + подарок Фен Моузер Cromoser','img/action_page/robot_ximeije.jpg','450.00','190.00',)">
+						<div class="col-xs-6 col-sm-4 col-md-4 col-lg-3 product-item"
+							onclick="openItemModalSetTwo('robot-xim','mouzer_fen_blr','Робот пылесос Ximeije + подарок Фен Моузер Cromoser','img/action_page/robot_ximeije.jpg','450.00','190.00',)">
 							<div class="pd-bd product-inner">
 								<div class="product-img"><img src="img/action_page/robot_ximeije.jpg" alt="" class="img-reponsive">
 									<div class="ribbon-price red"><span>- 68% </span></div>
@@ -390,7 +393,8 @@
 					</div>
 
 					<div class="action_page__tovar-container-item">
-						<div class="col-xs-6 col-sm-4 col-md-4 col-lg-3 product-item" onclick="openItemModalSetTwo('hong-hui','mouzer_fen_blr','Робот пылесос Hong Hui + подарок Фен Моузер Cromoser','img/action_page/robot_hong_hui.jpg','450.00','190.00',)">
+						<div class="col-xs-6 col-sm-4 col-md-4 col-lg-3 product-item"
+							onclick="openItemModalSetTwo('hong-hui','mouzer_fen_blr','Робот пылесос Hong Hui + подарок Фен Моузер Cromoser','img/action_page/robot_hong_hui.jpg','450.00','190.00',)">
 							<div class="pd-bd product-inner">
 								<div class="product-img"><img src="img/action_page/robot_hong_hui.jpg" alt="" class="img-reponsive">
 									<div class="ribbon-price red"><span>- 68% </span></div>
@@ -414,7 +418,8 @@
 					</div>
 
 					<div class="action_page__tovar-container-item">
-						<div class="col-xs-6 col-sm-4 col-md-4 col-lg-3 product-item" onclick="openItemModalSetTwo('apple_watch_1','i12','Smart-Часы V6 + подарок Наушники беспроводные i12','img/product/hit_tov_1.png','490.00','150.00',)">
+						<div class="col-xs-6 col-sm-4 col-md-4 col-lg-3 product-item"
+							onclick="openItemModalSetTwo('apple_watch_1','i12','Smart-Часы V6 + подарок Наушники беспроводные i12','img/product/hit_tov_1.png','490.00','150.00',)">
 							<div class="pd-bd product-inner">
 								<div class="product-img"><img src="img/product/hit_tov_1.png" alt="" class="img-reponsive">
 									<div class="ribbon-price red"><span>- 69% </span></div>
@@ -438,7 +443,8 @@
 					</div>
 
 					<div class="action_page__tovar-container-item">
-						<div class="col-xs-6 col-sm-4 col-md-4 col-lg-3 product-item" onclick="openItemModalSetTwo('air_pods_pro_1','braslet_fitness','Наушники копия Pro + подарок Браслет для фитнеса M3','img/product/tovar_125.png','390.00','170.00',)">
+						<div class="col-xs-6 col-sm-4 col-md-4 col-lg-3 product-item"
+							onclick="openItemModalSetTwo('air_pods_pro_1','braslet_fitness','Наушники копия Pro + подарок Браслет для фитнеса M3','img/product/tovar_125.png','390.00','170.00',)">
 							<div class="pd-bd product-inner">
 								<div class="product-img"><img src="img/product/tovar_125.png" alt="" class="img-reponsive">
 									<div class="ribbon-price red"><span>- 56% </span></div>
@@ -462,7 +468,8 @@
 					</div>
 
 					<div class="action_page__tovar-container-item">
-						<div class="col-xs-6 col-sm-4 col-md-4 col-lg-3 product-item" onclick="openItemModalSetTwo('wifi_camera_1080p','braslet_fitness','Камера IP 1080P HP поворотная + подарок Часы Led <br>*при покупке от 2шт дополнительная  скидка на каждую 10%','img/action_page/wifi_camera_1080p.jpg','420.00','170.00',)">
+						<div class="col-xs-6 col-sm-4 col-md-4 col-lg-3 product-item"
+							onclick="openItemModalSetTwo('wifi_camera_1080p','braslet_fitness','Камера IP 1080P HP поворотная + подарок Часы Led <br>*при покупке от 2шт дополнительная  скидка на каждую 10%','img/action_page/wifi_camera_1080p.jpg','420.00','170.00',)">
 							<div class="pd-bd product-inner">
 								<div class="product-img"><img src="img/action_page/wifi_camera_1080p.jpg" alt="" class="img-reponsive">
 									<div class="ribbon-price red"><span>- 59% </span></div>
@@ -486,7 +493,8 @@
 					</div>
 
 					<div class="action_page__tovar-container-item">
-						<div class="col-xs-6 col-sm-4 col-md-4 col-lg-3 product-item" onclick="openItemModalSetTwo('e88-max','airbuds_blr','Квадрокоптер E88 max + подарок Наушники беспроводные Airbuds','img/action_page/e88-max.jpg','420.00','190.00',)">
+						<div class="col-xs-6 col-sm-4 col-md-4 col-lg-3 product-item"
+							onclick="openItemModalSetTwo('e88-max','airbuds_blr','Квадрокоптер E88 max + подарок Наушники беспроводные Airbuds','img/action_page/e88-max.jpg','420.00','190.00',)">
 							<div class="pd-bd product-inner">
 								<div class="product-img"><img src="img/action_page/e88-max.jpg" alt="" class="img-reponsive">
 									<div class="ribbon-price red"><span>- 54% </span></div>
@@ -510,7 +518,8 @@
 					</div>
 
 					<div class="action_page__tovar-container-item">
-						<div class="col-xs-6 col-sm-4 col-md-4 col-lg-3 product-item" onclick="openItemModalSetThree('prod-boom-box','braslet_fitness','i12','Колонка портативная Boombox + подарок Браслет для фитнеса M3 и подарок Наушники беспроводные i12','img/action_page/boombox.png','280.00','140.00',)">
+						<div class="col-xs-6 col-sm-4 col-md-4 col-lg-3 product-item"
+							onclick="openItemModalSetThree('prod-boom-box','braslet_fitness','i12','Колонка портативная Boombox + подарок Браслет для фитнеса M3 и подарок Наушники беспроводные i12','img/action_page/boombox.png','280.00','140.00',)">
 							<div class="pd-bd product-inner">
 								<div class="product-img"><img src="img/action_page/boombox.png" alt="" class="img-reponsive">
 									<div class="ribbon-price red"><span>- 50% </span></div>
@@ -534,7 +543,8 @@
 					</div>
 
 					<div class="action_page__tovar-container-item">
-						<div class="col-xs-6 col-sm-4 col-md-4 col-lg-3 product-item" onclick="openItemModalSetTwo('kopiya-aiprods2','braslet_fitness','Наушники беспроводные копия A.Pods 2 + подарок Браслет для фитнеса M3','img/action_page/apods2.jpg','300.00','130.00',)">
+						<div class="col-xs-6 col-sm-4 col-md-4 col-lg-3 product-item"
+							onclick="openItemModalSetTwo('kopiya-aiprods2','braslet_fitness','Наушники беспроводные копия A.Pods 2 + подарок Браслет для фитнеса M3','img/action_page/apods2.jpg','300.00','130.00',)">
 							<div class="pd-bd product-inner">
 								<div class="product-img"><img src="img/action_page/apods2.jpg" alt="" class="img-reponsive">
 									<div class="ribbon-price red"><span>- 56% </span></div>
