add new pages and footer changes

--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
 						<div class="feature-block-img"><img src="img/feature/b_credit.svg" alt="" class="img-reponsive"></div>
 						<div class="feature-info v2">
 							<h3>Доступные цены</h3>
-							<p>Благодаря собственному производству и прямым поставкам!</p>
+							<p>Благодаря прямым поставкам!</p>
 						</div>
 					</div>
 					<div class="col-xs-12 col-sm-4 col-md-4 feature-item">
@@ -3037,6 +3037,8 @@
 								<ul class="footer-block-content">
 									<li><a href="/aboutus.html">О нас</a></li>
 									<li><a href="/delivery.html">Доставка </a></li>
+                                    <li><a href="/platej.html">Пример платежного документа</a></li>
+									<li><a href="/garant.html">Гарантийный талон</a></li>
 									<li><a href="politics.html" target="_blank">Политика конфиденциальности</a></li>
 									<li><a href="core/oferta.pdf" target="_blank">Публичная оферта </a></li>
 								</ul>
@@ -3082,6 +3084,7 @@
 							<p>Регистрационный номер в Торговом реестре: 515621</p>
 							<p>Регистирирующий орган: Администрация</p>
 							<p>Ленинского района г.Гродно</p>
+                            <p>Книга жалоб и предложений находится по адресу: г.Гродно, ул. Комарова, д. 12, комн. 413</p>
 						</div>
 					</div>
 					<div class="footer__requisites_ending"><a href="#"><img src="img/footer/pay_icons.png" alt=""
