--- a/garant.html
+++ b/garant.html
@@ -825,7 +825,7 @@
 					<div class="row justify-content-center">
 						<div class="delivery__item">
 							<div class="delivery__item__image">
-								<img src="./11.png" alt="" />
+								<img src="img/11.png" alt="" />
 							</div>
 
 							<br />
