--- a/platej.html
+++ b/platej.html
@@ -825,14 +825,14 @@
 					<div class="row justify-content-center">
 						<div class="delivery__item">
 							<div class="delivery__item__image">
-								<img src="./1.jpg" alt="" />
+								<img src="img/1.jpg" alt="" />
 							</div>
 							<br />
 							<div class="delivery__item__text">Курьерская доставка</div>
 						</div>
 						<div class="delivery__item">
 							<div class="delivery__item__image">
-								<img src="./2.jpg" alt="" />
+								<img src="img/2.jpg" alt="" />
 							</div>
 							<br />
 							<div class="delivery__item__text">Белпочтой</div>
