--- a/action.html
+++ b/action.html
@@ -369,10 +369,10 @@
 				<div class="action_page__tovar-container row">
 					<div class="action_page__tovar-container-item">
 						<div class="col-xs-6 col-sm-4 col-md-4 col-lg-3 product-item"
-							onclick="openItemModalSetTwo('robot-xim','mouzer_fen_blr','Робот пылесос Ximeije + подарок Фен Моузер Cromoser','img/action_page/robot_ximeije.jpg','450.00','190.00',)">
+							onclick="openItemModalSetTwo('robot-xim','mouzer_fen_blr','Робот пылесос Ximeije + подарок Фен Моузер Cromoser','img/action_page/robot_ximeije.jpg','450.00','199.00',)">
 							<div class="pd-bd product-inner">
 								<div class="product-img"><img src="img/action_page/robot_ximeije.jpg" alt="" class="img-reponsive">
-									<div class="ribbon-price red"><span>- 68% </span></div>
+									<div class="ribbon-price red"><span>- 55% </span></div>
 								</div>
 								<div class="product-info">
 									<div class="element-list element-list-middle">
@@ -381,7 +381,7 @@
 										<h3 class="product-title">Робот пылесос Ximeije</h3>
 										<div class="product-bottom">
 											<div class="product-price">
-												<span class="red">190.00 руб</span>
+												<span class="red">199.00 руб</span>
 												<span class="old">450.00 руб</span>
 											</div>
 										</div>
@@ -394,10 +394,10 @@
 
 					<div class="action_page__tovar-container-item">
 						<div class="col-xs-6 col-sm-4 col-md-4 col-lg-3 product-item"
-							onclick="openItemModalSetTwo('hong-hui','mouzer_fen_blr','Робот пылесос Hong Hui + подарок Фен Моузер Cromoser','img/action_page/robot_hong_hui.jpg','450.00','190.00',)">
+							onclick="openItemModalSetTwo('hong-hui','mouzer_fen_blr','Робот пылесос Hong Hui + подарок Фен Моузер Cromoser','img/action_page/robot_hong_hui.jpg','450.00','199.00',)">
 							<div class="pd-bd product-inner">
 								<div class="product-img"><img src="img/action_page/robot_hong_hui.jpg" alt="" class="img-reponsive">
-									<div class="ribbon-price red"><span>- 68% </span></div>
+									<div class="ribbon-price red"><span>- 55% </span></div>
 								</div>
 								<div class="product-info">
 									<div class="element-list element-list-middle">
@@ -406,7 +406,7 @@
 										<h3 class="product-title">Робот пылесос Hong Hui</h3>
 										<div class="product-bottom">
 											<div class="product-price">
-												<span class="red">190.00 руб</span>
+												<span class="red">199.00 руб</span>
 												<span class="old">450.00 руб</span>
 											</div>
 										</div>
@@ -494,10 +494,10 @@
 
 					<div class="action_page__tovar-container-item">
 						<div class="col-xs-6 col-sm-4 col-md-4 col-lg-3 product-item"
-							onclick="openItemModalSetTwo('e88-max','airbuds_blr','Квадрокоптер E88 max + подарок Наушники беспроводные Airbuds','img/action_page/e88-max.jpg','420.00','190.00',)">
+							onclick="openItemModalSetTwo('e88-max','airbuds_blr','Квадрокоптер E88 max + подарок Наушники беспроводные Airbuds','img/action_page/e88-max.jpg','420.00','199.00',)">
 							<div class="pd-bd product-inner">
 								<div class="product-img"><img src="img/action_page/e88-max.jpg" alt="" class="img-reponsive">
-									<div class="ribbon-price red"><span>- 54% </span></div>
+									<div class="ribbon-price red"><span>- 53% </span></div>
 								</div>
 								<div class="product-info">
 									<div class="element-list element-list-middle">
@@ -506,7 +506,7 @@
 										<h3 class="product-title">Квадрокоптер E88 max</h3>
 										<div class="product-bottom">
 											<div class="product-price">
-												<span class="red">190.00 руб</span>
+												<span class="red">199.00 руб</span>
 												<span class="old">420.00 руб</span>
 											</div>
 										</div>
@@ -567,7 +567,55 @@
 						</div>
 					</div>
 
+					<div class="action_page__tovar-container-item">
+						<div class="col-xs-6 col-sm-4 col-md-4 col-lg-3 product-item"
+							onclick="openItemModalSetTwo('shurupovert1','stabl_bird_blr','Шуруповерт Dewalt + подарок триммер Стаблберд','img/action_page/shurik_dewalt.png','570.00','289.00',)">
+							<div class="pd-bd product-inner">
+								<div class="product-img"><img src="img/action_page/shurik_dewalt.png" alt="" class="img-reponsive">
+									<div class="ribbon-price red"><span>- 51% </span></div>
+								</div>
+								<div class="product-info">
+									<div class="element-list element-list-middle">
 
+										<p class="product-cate">Дом</p>
+										<h3 class="product-title">Профессиональная дрель-шуруповерт Dewalt</h3>
+										<div class="product-bottom">
+											<div class="product-price">
+												<span class="red">289.00 руб</span>
+												<span class="old">570.00 руб</span>
+											</div>
+										</div>
+
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<div class="action_page__tovar-container-item">
+						<div class="col-xs-6 col-sm-4 col-md-4 col-lg-3 product-item"
+							onclick="openItemModalSetTwo('avtochehli_blr_3','avto_pilesos','Наушники беспроводные копия A.Pods 2 + подарок пылесос автомобильный','img/action_page/avtochehli_blr_3.png','570.00','289.00',)">
+							<div class="pd-bd product-inner">
+								<div class="product-img"><img src="img/action_page/avtochehli_blr_3.png" alt="" class="img-reponsive">
+									<div class="ribbon-price red"><span>- 51% </span></div>
+								</div>
+								<div class="product-info">
+									<div class="element-list element-list-middle">
+
+										<p class="product-cate">Автомобиль</p>
+										<h3 class="product-title">Комплект чехлов для автомобиля, экокожа, ромб черный-бежевый</h3>
+										<div class="product-bottom">
+											<div class="product-price">
+												<span class="red">289.00 руб</span>
+												<span class="old">570.00 руб</span>
+											</div>
+										</div>
+
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
 
 
 				</div>
