--- a/action.html
+++ b/action.html
@@ -569,16 +569,16 @@
 
 					<div class="action_page__tovar-container-item">
 						<div class="col-xs-6 col-sm-4 col-md-4 col-lg-3 product-item"
-							onclick="openItemModalSetTwo('shurupovert1','stabl_bird_blr','Шуруповерт Dewalt + подарок триммер Стаблберд','img/action_page/shurik_dewalt.png','570.00','289.00',)">
+							onclick="openItemModalSetTwo('shurupovert','stabl_bird_blr','Шуруповерт Makita + подарок триммер Стаблберд','img/action_page/shurik_makita.png','570.00','289.00',)">
 							<div class="pd-bd product-inner">
-								<div class="product-img"><img src="img/action_page/shurik_dewalt.png" alt="" class="img-reponsive">
+								<div class="product-img"><img src="img/action_page/shurik_makita.png" alt="" class="img-reponsive">
 									<div class="ribbon-price red"><span>- 51% </span></div>
 								</div>
 								<div class="product-info">
 									<div class="element-list element-list-middle">
 
 										<p class="product-cate">Дом</p>
-										<h3 class="product-title">Профессиональная дрель-шуруповерт Dewalt</h3>
+										<h3 class="product-title">Профессиональная дрель-шуруповерт Makita</h3>
 										<div class="product-bottom">
 											<div class="product-price">
 												<span class="red">289.00 руб</span>
