delete copy and Makita

--- a/action.html
+++ b/action.html
@@ -29,7 +29,7 @@
 									<li class="level3"><a href="/product_smart_w6.html" title="">Smart-часы V6</a></li>
 									<li class="level3"><a href="/product_airbuds.html" title="">Наушники беспроводные Airbuds</a></li>
 									<li class="level3"><a href="/product_fitness_bras.html" title="">Фитнес браслет M6</a></li>
-									<li class="level3"><a href="/product_airpods_pro.html" title="">Наушники копия Pro</a></li>
+									<li class="level3"><a href="/product_airpods_pro.html" title="">Наушники Pro</a></li>
 								</ul>
 							</li>
 							<!-- <li class="level2"><a href="#">Комплекты товаров</a><ul class="menu-level-2"><li class="level3"><a href="#" title="">ggg ggg ggg</a></li><li class="level3"><a href="#" title="">ggg ggg ggg</a></li><li class="level3"><a href="#" title="">ggg ggg ggg</a></li><li class="level3"><a href="#" title="">ggg ggg ggg</a></li><li class="level3"><a href="#" title="">ggg ggg ggg</a></li><li class="level3"><a href="#" title="">ggg ggg ggg</a></li></ul></li>-->
@@ -212,7 +212,7 @@
 												<li><a href="/product_smart_w6.html">Smart-часы V6</a></li>
 												<li><a href="/product_airbuds.html">Наушники беспроводные Airbuds</a></li>
 												<li><a href="/product_fitness_bras.html"></a>Фитнес браслет M6</a></li>
-												<li><a href="/product_airpods_pro.html">Наушники копия Pro</a></li>
+												<li><a href="/product_airpods_pro.html">Наушники Pro</a></li>
 											</ul>
 										</div>
 									</li>
@@ -444,7 +444,7 @@
 
 					<div class="action_page__tovar-container-item">
 						<div class="col-xs-6 col-sm-4 col-md-4 col-lg-3 product-item"
-							onclick="openItemModalSetTwo('air_pods_pro_1','braslet_fitness','Наушники копия Pro + подарок Браслет для фитнеса M3','img/product/tovar_125.png','390.00','170.00',)">
+							onclick="openItemModalSetTwo('air_pods_pro_1','braslet_fitness','Наушники  Pro + подарок Браслет для фитнеса M3','img/product/tovar_125.png','390.00','170.00',)">
 							<div class="pd-bd product-inner">
 								<div class="product-img"><img src="img/product/tovar_125.png" alt="" class="img-reponsive">
 									<div class="ribbon-price red"><span>- 56% </span></div>
@@ -453,7 +453,7 @@
 									<div class="element-list element-list-middle">
 
 										<p class="product-cate">Техника</p>
-										<h3 class="product-title">Наушники копия Pro</h3>
+										<h3 class="product-title">Наушники  Pro</h3>
 										<div class="product-bottom">
 											<div class="product-price">
 												<span class="red">150.00 руб</span>
@@ -544,7 +544,7 @@
 
 					<div class="action_page__tovar-container-item">
 						<div class="col-xs-6 col-sm-4 col-md-4 col-lg-3 product-item"
-							onclick="openItemModalSetTwo('kopiya-aiprods2','braslet_fitness','Наушники беспроводные копия A.Pods 2 + подарок Браслет для фитнеса M3','img/action_page/apods2.jpg','300.00','130.00',)">
+							onclick="openItemModalSetTwo('kopiya-aiprods2','braslet_fitness','Наушники беспроводные  A.Pods 2 + подарок Браслет для фитнеса M3','img/action_page/apods2.jpg','300.00','130.00',)">
 							<div class="pd-bd product-inner">
 								<div class="product-img"><img src="img/action_page/apods2.jpg" alt="" class="img-reponsive">
 									<div class="ribbon-price red"><span>- 56% </span></div>
@@ -553,7 +553,7 @@
 									<div class="element-list element-list-middle">
 
 										<p class="product-cate">Техника</p>
-										<h3 class="product-title">Наушники беспроводные копия A.Pods 2</h3>
+										<h3 class="product-title">Наушники беспроводные  A.Pods 2</h3>
 										<div class="product-bottom">
 											<div class="product-price">
 												<span class="red">130.00 руб</span>
@@ -567,7 +567,7 @@
 						</div>
 					</div>
 
-					<div class="action_page__tovar-container-item">
+					<!-- <div class="action_page__tovar-container-item">
 						<div class="col-xs-6 col-sm-4 col-md-4 col-lg-3 product-item"
 							onclick="openItemModalSetTwo('shurupovert','stabl_bird_blr','Шуруповерт Makita + подарок триммер Стаблберд','img/action_page/shurik_makita.png','570.00','289.00',)">
 							<div class="pd-bd product-inner">
@@ -590,11 +590,11 @@
 								</div>
 							</div>
 						</div>
-					</div>
+					</div> -->
 
 					<div class="action_page__tovar-container-item">
 						<div class="col-xs-6 col-sm-4 col-md-4 col-lg-3 product-item"
-							onclick="openItemModalSetTwo('avtochehli_blr_3','avto_pilesos','Наушники беспроводные копия A.Pods 2 + подарок пылесос автомобильный','img/action_page/avtochehli_blr_3.png','570.00','289.00',)">
+							onclick="openItemModalSetTwo('avtochehli_blr_3','avto_pilesos','Наушники беспроводные  A.Pods 2 + подарок пылесос автомобильный','img/action_page/avtochehli_blr_3.png','570.00','289.00',)">
 							<div class="pd-bd product-inner">
 								<div class="product-img"><img src="img/action_page/avtochehli_blr_3.png" alt="" class="img-reponsive">
 									<div class="ribbon-price red"><span>- 51% </span></div>
