--- a/garant.html
+++ b/garant.html
@@ -47,7 +47,7 @@
 										</li>
 										<li class="level3">
 											<a href="/product_airpods_pro.html" title=""
-												>Наушники копия Pro</a
+												>Наушники  Pro</a
 											>
 										</li>
 									</ul>
@@ -460,7 +460,7 @@
 													</li>
 													<li>
 														<a href="/product_airpods_pro.html"
-															>Наушники копия Pro</a
+															>Наушники  Pro</a
 														>
 													</li>
 												</ul>
