--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 									<li class="level3"><a href="/product_smart_w6.html" title="">Smart-часы V6</a></li>
 									<li class="level3"><a href="/product_airbuds.html" title="">Наушники беспроводные Airbuds</a></li>
 									<li class="level3"><a href="/product_fitness_bras.html" title="">Фитнес браслет M6</a></li>
-									<li class="level3"><a href="/product_airpods_pro.html" title="">Наушники копия PRO</a></li>
+									<li class="level3"><a href="/product_airpods_pro.html" title="">Наушники  PRO</a></li>
 								</ul>
 							</li>
 							<!-- <li class="level2"><a href="#">Комплекты товаров</a><ul class="menu-level-2"><li class="level3"><a href="#" title="">ggg ggg ggg</a></li><li class="level3"><a href="#" title="">ggg ggg ggg</a></li><li class="level3"><a href="#" title="">ggg ggg ggg</a></li><li class="level3"><a href="#" title="">ggg ggg ggg</a></li><li class="level3"><a href="#" title="">ggg ggg ggg</a></li><li class="level3"><a href="#" title="">ggg ggg ggg</a></li></ul></li>-->
@@ -211,7 +211,7 @@
 												<li><a href="/product_smart_w6.html">Smart-часы V6</a></li>
 												<li><a href="/product_airbuds.html">Наушники беспроводные Airbuds</a></li>
 												<li><a href="/product_fitness_bras.html">Фитнес браслет M6</a></li>
-												<li><a href="/product_airpods_pro.html">Наушники копия PRO</a></li>
+												<li><a href="/product_airpods_pro.html">Наушники  PRO</a></li>
 											</ul>
 										</div>
 									</li>
@@ -652,8 +652,8 @@
 							<div class="product-item">
 								<div class="pd-bd product-inner">
 									<div class="product-img"
-										onclick="openItemModalSetTwoWithoutPrice('air_pods_pro_1','golden_bank','Наушники копия PRO + Павербанк 20800 mah MI','img/product/action_tov_9.png','130.00',)">
-										<!-- <a href="#" onclick="openItemModalSetTwo('air_pods_pro_1','golden_bank','Наушники копия AirPods Pro + Павербанк 20800 mah MI','img/product/action_tov_9.png','210.00','130.00',)"> --><a
+										onclick="openItemModalSetTwoWithoutPrice('air_pods_pro_1','golden_bank','Наушники  PRO + Павербанк 20800 mah MI','img/product/action_tov_9.png','130.00',)">
+										<!-- <a href="#" onclick="openItemModalSetTwo('air_pods_pro_1','golden_bank','Наушники  AirPods Pro + Павербанк 20800 mah MI','img/product/action_tov_9.png','210.00','130.00',)"> --><a
 											href="#"><img src="img/product/action_tov_9.png" alt="" class="img-reponsive"></a></div>
 									<div class="product-info">
 										<div class="color-group"></div>
@@ -691,8 +691,8 @@
 												</svg></div>
 											<p class="product-cate">Комплект "PRO"</p>
 											<div class="container_for_text"
-												onclick="openItemModalSetTwoWithoutPrice( 'air_pods_pro_1', 'golden_bank', 'Наушники копия PRO + Павербанк 20800 mah MI', 'img/product/action_tov_9.png', '130.00',)">
-												<h3 class="product-title"><a href="#">Наушники копия PRO + Павербанк 20800 mah MI</a></h3>
+												onclick="openItemModalSetTwoWithoutPrice( 'air_pods_pro_1', 'golden_bank', 'Наушники  PRO + Павербанк 20800 mah MI', 'img/product/action_tov_9.png', '130.00',)">
+												<h3 class="product-title"><a href="#">Наушники  PRO + Павербанк 20800 mah MI</a></h3>
 												<div class="product-bottom">
 													<div class="product-price"><span>Цену уточняйте у менеджера</span></div>
 												</div>
@@ -3013,6 +3013,7 @@
 									<li class="email"><span>yekommers@bk.ru</span></li>
 									<li class="time"><span>Режим работы: 24/7</span></li>
 									<li class="email"><span> ЕРИП, Белпочта</span></li>
+                                    
 								</ul>
 								<div class="footer-social social">
 									<h3 class="footer-block-title"> Следите за нами в instagram</h3><a href="https://www.instagram.com/starshop.by/"
@@ -3087,6 +3088,12 @@
                             <p>Книга жалоб и предложений находится по адресу: г.Гродно, ул. Комарова, д. 12, комн. 413</p>
 						</div>
 					</div>
+                    <br>
+                    <center style="color: white;">
+                        <P>Отдел по работе с обращениями граждан и юридических лиц: телефоны отдела - 73-55-66, 73-55-67.</P>
+                    <p>Уполномоченный представитель по работе с обращениями покупателей ООО Телеком: телефон - +375298753520, почта - yekommers@bk.ru</p>
+                    </center>
+
 					<div class="footer__requisites_ending"><a href="#"><img src="img/footer/pay_icons.png" alt=""
 								class="img-reponsive"></a></div>
 				</div>
