--- a/product_airbuds.html
+++ b/product_airbuds.html
@@ -28,7 +28,7 @@
 									<li class="level3"><a href="/product_smart_w6.html" title="">Smart-часы V6</a></li>
 									<li class="level3"><a href="/product_airbuds.html" title="">Наушники беспроводные Airbuds</a></li>
 									<li class="level3"><a href="/product_fitness_bras.html" title="">Фитнес браслет M6</a></li>
-									<li class="level3"><a href="/product_airpods_pro.html" title="">Наушники копия AirPods Pro</a></li>
+									<li class="level3"><a href="/product_airpods_pro.html" title="">Наушники  AirPods Pro</a></li>
 								</ul>
 							</li>
 						</ul>
