--- a/product_airpods_pro.html
+++ b/product_airpods_pro.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-	<title>Наушники копия Pro</title>
+	<title>Наушники  Pro</title>
 	<link rel="stylesheet" href="css/owl.carousel.min.css">
 	<link rel="shortcut icon" href="img/logo.png" type="image/svg">
 	<link rel="stylesheet" href="css/slick.css">
@@ -29,7 +29,7 @@
 									<li class="level3"><a href="/product_smart_w6.html" title="">Smart-часы V6</a></li>
 									<li class="level3"><a href="/product_airbuds.html" title="">Наушники беспроводные Airbuds</a></li>
 									<li class="level3"><a href="/product_fitness_bras.html" title="">Фитнес браслет M6</a></li>
-									<li class="level3"><a href="/product_airpods_pro.html" title="">Наушники копия Pro</a></li>
+									<li class="level3"><a href="/product_airpods_pro.html" title="">Наушники  Pro</a></li>
 								</ul>
 							</li>
 							<!-- <li class="level2"><a href="#">Комплекты товаров</a><ul class="menu-level-2"><li class="level3"><a href="#" title="">ggg ggg ggg</a></li><li class="level3"><a href="#" title="">ggg ggg ggg</a></li><li class="level3"><a href="#" title="">ggg ggg ggg</a></li><li class="level3"><a href="#" title="">ggg ggg ggg</a></li><li class="level3"><a href="#" title="">ggg ggg ggg</a></li><li class="level3"><a href="#" title="">ggg ggg ggg</a></li></ul></li>-->
@@ -212,7 +212,7 @@
 												<li><a href="/product_smart_w6.html">Smart-часы V6</a></li>
 												<li><a href="/product_airbuds.html">Наушники беспроводные Airbuds</a></li>
 												<li><a href="/product_fitness_bras.html">Фитнес браслет M6</a></li>
-												<li><a href="/product_airpods_pro.html">Наушники копия Pro</a></li>
+												<li><a href="/product_airpods_pro.html">Наушники  Pro</a></li>
 											</ul>
 										</div>
 									</li>
@@ -346,7 +346,7 @@
 				<ul class="breadcrumb">
 					<li><a href="/">Главная</a></li>
 					<li><a href="#" class="active"></a>Техника</li>
-					<li><a href="#" class="active"></a>Наушники копия Pro</li>
+					<li><a href="#" class="active"></a>Наушники  Pro</li>
 				</ul>
 				<div class="row">
 					<div class="col-xs-12 col-sm-6 col-md-6">
@@ -427,13 +427,13 @@
 											</span></div>
 									</div>
 								</div>
-								<h3 class="product-title"><a href="#">Наушники копия Pro </a></h3>
+								<h3 class="product-title"><a href="#">Наушники  Pro </a></h3>
 								<div class="product-price"><span>190 BYN</span></div>
 								<div class="availability">
 									<p class="product-inventory"> <label>Доступность: </label><span> на складе</span></p>
 								</div>
 								<div class="short-desc">
-									<p class="product-desc"> Pro копия — наушники с технологией активного шумоподавления,которые
+									<p class="product-desc"> Pro  — наушники с технологией активного шумоподавления,которые
 										непрерывно оптимизируют звучание с учётом формы вашего уха и положения вкладышей. Ониотлично
 										заглушают внешние шумы, поэтому вы можете полностью погрузиться в музыку.Наружный микрофон
 										улавливает внешние шумы. Эти шумы компенсируются обратной звуковой волной той жеамплитуды — прежде
@@ -462,7 +462,7 @@
 											<div class="tc pa"><a class="js-plus quantity-right-plus"><i class="fa fa-caret-up"></i></a><a
 													class="js-minus quantity-left-minus"><i class="fa fa-caret-down"></i></a></div>
 										</div><a href="#" class="btn-add-cart"
-											onclick="openItemModal('air_pods','Наушники копия Pro','img/product/tovar_125.png','240.20','190','true',),getInputValue()">заказать<span
+											onclick="openItemModal('air_pods','Наушники  Pro','img/product/tovar_125.png','240.20','190','true',),getInputValue()">заказать<span
 												class="icon-bg icon-cart v2"></span></a>
 									</div>
 									<!-- <a href="#" class="e-btn btn-icon"><span class="icon-bg icon-wishlist"></span></a><a href="#" class="e-btn btn-icon"><span class="icon-bg icon-compare"></span></a> -->
