--- a/product_viniri.html
+++ b/product_viniri.html
@@ -29,7 +29,7 @@
 									<li class="level3"><a href="/product_smart_w6.html" title="">Smart-часы V6</a></li>
 									<li class="level3"><a href="/product_airbuds.html" title="">Наушники беспроводные Airbuds</a></li>
 									<li class="level3"><a href="/product_fitness_bras.html" title="">Фитнес браслет M6</a></li>
-									<li class="level3"><a href="/product_airpods_pro.html" title="">Наушники копия Pro</a></li>
+									<li class="level3"><a href="/product_airpods_pro.html" title="">Наушники  Pro</a></li>
 								</ul>
 							</li>
 							<!-- <li class="level2"><a href="#">Комплекты товаров</a><ul class="menu-level-2"><li class="level3"><a href="#" title="">ggg ggg ggg</a></li><li class="level3"><a href="#" title="">ggg ggg ggg</a></li><li class="level3"><a href="#" title="">ggg ggg ggg</a></li><li class="level3"><a href="#" title="">ggg ggg ggg</a></li><li class="level3"><a href="#" title="">ggg ggg ggg</a></li><li class="level3"><a href="#" title="">ggg ggg ggg</a></li></ul></li>-->
@@ -216,7 +216,7 @@
 												<li><a href="/product_smart_w6.html">Smart-часы V6</a></li>
 												<li><a href="/product_airbuds.html">Наушники беспроводные Airbuds</a></li>
 												<li><a href="/product_fitness_bras.html">Фитнес браслет M6</a></li>
-												<li><a href="/product_airpods_pro.html">Наушники копия Pro</a></li>
+												<li><a href="/product_airpods_pro.html">Наушники  Pro</a></li>
 											</ul>
 										</div>
 									</li>
