--- a/shop_full.html
+++ b/shop_full.html
@@ -29,7 +29,7 @@
 									<li class="level3"><a href="/product_smart_w6.html" title="">Smart-часы V6</a></li>
 									<li class="level3"><a href="/product_airbuds.html" title="">Наушники беспроводные Airbuds</a></li>
 									<li class="level3"><a href="/product_fitness_bras.html" title="">Фитнес браслет M6</a></li>
-									<li class="level3"><a href="/product_airpods_pro.html" title="">Наушники копия PRO</a></li>
+									<li class="level3"><a href="/product_airpods_pro.html" title="">Наушники  PRO</a></li>
 								</ul>
 							</li>
 							<!-- <li class="level2"><a href="#">Комплекты товаров</a><ul class="menu-level-2"><li class="level3"><a href="#" title="">ggg ggg ggg</a></li><li class="level3"><a href="#" title="">ggg ggg ggg</a></li><li class="level3"><a href="#" title="">ggg ggg ggg</a></li><li class="level3"><a href="#" title="">ggg ggg ggg</a></li><li class="level3"><a href="#" title="">ggg ggg ggg</a></li><li class="level3"><a href="#" title="">ggg ggg ggg</a></li></ul></li>-->
@@ -212,7 +212,7 @@
 												<li><a href="/product_smart_w6.html">Smart-часы V6</a></li>
 												<li><a href="/product_airbuds.html">Наушники беспроводные Airbuds</a></li>
 												<li><a href="/product_fitness_bras.html">Фитнес браслет M6</a></li>
-												<li><a href="/product_airpods_pro.html">Наушники копия PRO</a></li>
+												<li><a href="/product_airpods_pro.html">Наушники  PRO</a></li>
 											</ul>
 										</div>
 									</li>
@@ -599,7 +599,7 @@
 											</div>
 										</div>
 										<p class="product-cate">Техника</p>
-										<h3 class="product-title"><a href="/product_airpods_pro.html">Наушники копия PRO</a></h3>
+										<h3 class="product-title"><a href="/product_airpods_pro.html">Наушники  PRO</a></h3>
 										<div class="product-bottom">
 											<div class="product-price"><span>190 BYN</span></div>
 										</div>
