add date function from action.html

--- a/action.html
+++ b/action.html
@@ -13,6 +13,7 @@
 	<link rel="stylesheet" href="css/owl.theme.default.min.css">
 	<link rel="stylesheet" href="css/jquery.fancybox.min.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<script src="js/date.js"></script>
 </head>
 
 <body>
@@ -351,8 +352,9 @@
 						<!-- <img src="" alt=""> -->
 					</div>
 					<div class="action_page__info-container-text">
-						<p class="action_page__info-container-text-title" style="font-weight: bold; color: #e60000;">С 9 сентября по
-							31 октября:</p>
+						<p class="action_page__info-container-text-title" style="font-weight: bold; color: #e60000;">
+							<script>pushTime(0)</script>:
+						</p>
 						<p>• в магазине Star Shop проходит акция между 14 магазинов партнеров;</p>
 						<p>• каждый день робот будет выбирать 3х счастливчиков из более 2 миллионов покупателей.
 							Победитель может стать обладателем Power Banka на <b>20.800 mhA.</b>, Которой смогут забрать при первой же
@@ -453,7 +455,7 @@
 									<div class="element-list element-list-middle">
 
 										<p class="product-cate">Техника</p>
-										<h3 class="product-title">Наушники  Pro</h3>
+										<h3 class="product-title">Наушники Pro</h3>
 										<div class="product-bottom">
 											<div class="product-price">
 												<span class="red">150.00 руб</span>
@@ -553,7 +555,7 @@
 									<div class="element-list element-list-middle">
 
 										<p class="product-cate">Техника</p>
-										<h3 class="product-title">Наушники беспроводные  A.Pods 2</h3>
+										<h3 class="product-title">Наушники беспроводные A.Pods 2</h3>
 										<div class="product-bottom">
 											<div class="product-price">
 												<span class="red">130.00 руб</span>
@@ -691,7 +693,8 @@
 							<p>Выдано 27.02.2015 г.</p>
 						</div>
 						<div class="footer__requisites-item center">
-							<p>ВСЕ ПРАВА ЗАЩИЩЕНЫ ©<script>
+							<p>ВСЕ ПРАВА ЗАЩИЩЕНЫ ©
+								<script>
 									document.write((new Date()).getFullYear())
 								</script>
 							</p>
